fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ margin: 0;
     left: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 10vh; /* Place content 60px from the top */
+    padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
